# pac

./: Cargo.toml
src/: errors.rs  lib.rs  main.rs  scopeguard.rs
src/brew_api/: mod.rs
src/cli/: command.rs
src/database/: local.rs  mod.rs
src/macos/: file.rs  mod.rs  version.rs
src/package/: find_depend.rs  install.rs  list.rs  load_path.rs  mod.rs  preprocess.rs  relocate.rs  uninstall.rs
src/package/sandbox/: mod.rs  process.rs  sandbox.sb
src/package/script/: mod.rs  parse.rs  task.rs
src/sql/: consts.rs  delete_pac.sql  init_database.sql  insert_conflict.sql  insert_dep.sql  insert_installed_file.sql  insert_pac.sql  select_exist_file.sql  select_installed_file.sql  select_orphan_pac.sql  select_pac_id.sql  select_pac_name.sql  select_pac_names.sql  select_reverse_dep.sql  update_pac_state.sql
tests/: get.sh  test.toml
