[package]
name = "pac"
version = "0.1.0"
edition = "2024"

[dependencies]
apple-codesign = "0.29.0"
arwen = "0.0.2"
dirs = "6.0.0"
flate2 = "1.1.4"
fs_extra = "1.3.0"
futures = "0.3.31"
goblin = "0.10.3"
hex = "0.4.3"
indicatif = "0.18.1"
infer = "0.19.0"
objc2-foundation = "0.3.2"
reqwest = "0.12.24"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"]}
tar = "0.4.44"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
