[package]
name = "pac"
version = "0.1.0"
edition = "2024"

[dependencies]
apple-codesign = { version = "0.29.0", default-features = false }
arwen = { version = "0.0.2" }
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
dirs = { version = "6.0.0", default-features = false }
flate2 = { version = "1.1.4", default-features = false }
futures = { version = "0.3.31", default-features = false }
goblin = { version = "0.10.3" }
hex = { version = "0.4.3",  default-features = false }
indicatif = { version = "0.18.1",  default-features = false }
infer = { version = "0.19.0",  default-features = false }
objc2-foundation = { version = "0.3.2" , default-features = false, features = ["alloc", "NSProcessInfo"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "charset", "system-proxy", "h2"] }
reqwest-middleware = { version = "0.4.2", default-features = false }
reqwest-retry = { version = "0.7.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
strum = { version = "0.27.2", features = ["derive"], default-features = false }
tar = { version = "0.4.44", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0",  default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
walkdir = { version = "2.5.0", default-features = false }
